# RgNurbs

./: .gitmodules  CMakeLists.txt  RoadMap.txt
Geom/Geom/: Geom.cpp
lib/: gtest_main.lib
lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
src/: CMakeLists-.txt  CMakeLists.txt  Geom.cpp  RgMath.h  ZwMath.h  beizier_curve.cpp  beizier_curve.h  bezier_curve.cpp  bezier_curve.h  bezier_curve_gpt.h  bspline_basis.h  bspline_curve.cpp  bspline_curve.h  homo_point.cpp  homo_point.h  nurbs_curve.cpp  nurbs_curve.h  nurbs_export.h  nurbs_surface.h  point.cpp  point.h  rg_assert.h
tests/: CMakeLists.txt  Geom.cpp
tests/src/: Geom.cpp  bezier_curve_tests.cpp  bspline_curve_tests.cpp
